fix styling and text wrapAround

--- a/src/main/resources/view/PatientViewCard.css
+++ b/src/main/resources/view/PatientViewCard.css
@@ -1,5 +1,6 @@
 #patientViewCard {
     -fx-text-fill: white;
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 #patientContainer {
